Sat Aug 25 03:36:42 2007  Tim Janik  <timj@gtk.org>

	* DoxiParser.py (doxer_setget): reap child process, fixed stripping.

Sat Aug 25 03:16:48 2007  Tim Janik  <timj@gtk.org>

	* fixed $Date parsing, allow to extract dates from git.

Sat Aug 25 02:53:19 2007  Tim Janik  <timj@gtk.org>

	* DoxiParser.py: support git_author_date flag in doxer_setget(),
	which tries to set the value from git history.
	extended datetime_parse() to parse rfc2822 dates.

Fri Jan  5 00:54:29 2007  Tim Janik  <timj@gtk.org>

	* qxmlparser.py (DoxygenXMLParser.parse_field): ignore
	autognenerated field names for anonymous structs or unions.

Mon Oct 23 01:07:55 2006  Tim Janik  <timj@gtk.org>

	* Code2Doxi.py: escape commas in urls.

Sun Oct  1 13:09:24 2006  Tim Janik  <timj@gtk.org>

	* Data.py: extended Parameter for default values and const-ness.
	extended Function for various qualifier bits. extended Struct to
	contain methods and a list of derived types.

	* Code2Doxi.py: write methods out with structures.

	* HtmlGenerator.py: fixed parameter/flush_parameters to work at any
	nested level within a section. fixed endless recursion bug in case
	elements nested in parameter descriptions call flush_parameters.

	* qxmlparser.py: for compounds, search for descriptions in the children
	of a node, not the whole subtree of a node, so we don't attribute the
	description of a child element to a prent element. test variables for
	const-ness. parse methods as part of structures. parse class methods.
	parse default values for function arguments.
	parse doxygen namespaces, this seems to lack namespace application to
	symbols defined within the namespace though.

	* qdoxygen.py: do not delete doxyfile in debugging mode.

Sat Apr 22 17:09:50 2006  Tim Janik  <timj@gtk.org>

	* qdoxygen.py: avoid configuring USE_HTAGS which only doxygen 1.4.4 has.

	* Makefile.am: fixed "clean" rule, has to be "clean-local".

Thu Mar 23 02:47:28 2006  Tim Janik  <timj@gtk.org>

	* docu-main.doxi: more fixups.
